# omi

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  ACCEPTANCE_VERIFICATION.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  E2E_VERIFICATION_CHECKLIST.md  IDE_AUTOCOMPLETION_VERIFICATION.md  MANUAL_VERIFICATION_REPORT.md  NEXT_STEPS.md  README.md  RELEASING.md  ROADMAP.md  SKILL.md  SUBTASK_2_2_SUMMARY.md  SUBTASK_4-2_SUMMARY.md  SUBTASK_5-2_SUMMARY.md  SUBTASK_5_2_VERIFICATION_SUMMARY.md  SUBTASK_6_3_SUMMARY.md  SYNC_TEST_README.md  check_signatures.py  e2e_verify.sh  mypy-audit.txt  performance_results.md  plugin.json  pyproject.toml  pytest.ini  run_performance_benchmark.py  setup.py  start_test_server.py  test_compression_config.py  test_graph_endpoint.py  test_init_command.py  test_mypy_checking.py  test_namespace_api.sh  test_sync_acceptance.py  test_type_hints.py  verify_compression_config.py  (+2 more)
.auto-claude/specs/018-automatic-memory-summarization-compression/: build-progress.txt  implementation_plan.json
.auto-claude/specs/027-add-verbose-and-quiet-mode-options/: build-progress.txt  implementation_plan.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: API.md  ARCHITECTURE.md  PLUGINS.md  QUICKSTART.md  SECURITY.md
docs/images/: dashboard-screenshot.png.placeholder
docs/patterns/: async_batch_operations.md  belief_tracking.md  session_lifecycle.md
examples/omi-embedding-example/: README.md  pyproject.toml
examples/omi-embedding-example/src/omi_embedding_example/: __init__.py  provider.py
src/: AGENTS.md  OPENAPI_DOCUMENTATION.md  validate_openapi.py
src/omi/: AGENTS.md  __init__.py  api.py  async_api.py  async_embeddings.py  audit_log.py  auth.py  belief.py  belief_propagation.py  cli.py  conflict_resolution.py  dashboard_api.py  embeddings.py  event_bus.py  event_history.py  events.py  export_import.py  moltvault.py  namespaces.py  permissions.py  persistence.py  plugins.py  policies.py  rbac.py  rest_api.py  security.py  server.py  shared_namespace.py  storage_backends.py  subscriptions.py  summarizer.py  user_manager.py  utils.py
src/omi/cli/: __init__.py  common.py  config.py  events.py  index.py  memory.py  monitoring.py  namespace.py  plugins.py  policy.py  serve.py  session.py  snapshot.py  subscribe.py  sync.py  sync_commands.py  user.py
src/omi/dashboard/: .gitignore  README.md  index.html  package.json  vite.config.js
src/omi/dashboard/src/: App.css  App.jsx
src/omi/dashboard/src/api/: client.js
src/omi/dashboard/src/components/: BeliefNetwork.css  BeliefNetwork.jsx  GraphVisualization.css  GraphVisualization.jsx  SearchBar.css  SearchBar.jsx  SessionTimeline.css  SessionTimeline.jsx  StorageStats.css  StorageStats.jsx  SyncStatus.css  SyncStatus.jsx  VersionTimeline.css  VersionTimeline.jsx
src/omi/graph/: AGENTS.md  __init__.py  belief_network.py  memory_graph.py
src/omi/migrations/: __init__.py  backup.py  manager.py  migration_base.py  registry.py
src/omi/migrations/versions/: __init__.py  v001_example.py  v002_add_archived_column.py  v002_rbac_tables.py
src/omi/storage/: AGENTS.md  __init__.py  ann_index.py  async_graph_palace.py  crud.py  embeddings.py  graph_ops.py  graph_palace.py  models.py  now.py  schema.py  search.py  snapshots.py  stats.py  traversal.py
src/omi/sync/: __init__.py  conflict_resolver.py  partition_handler.py  protocol.py  sync_manager.py  topology.py
src/omi_openclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: AGENTS.md  __init__.py  benchmark_async.py  conftest.py  test_ann_accuracy.py  test_ann_index.py  test_ann_performance.py  test_api_auth.py  test_api_e2e_workflow.py  test_async_api.py  test_async_embeddings.py  test_async_graph_palace.py  test_belief_propagation.py  test_belief_properties.py  test_cli.py  test_cli_cache.py  test_cli_completion.py  test_cli_debug.py  test_cli_e2e_workflow.py  test_cli_events.py  test_cli_graph.py  test_cli_highlighting.py  test_cli_inspect.py  test_cli_policy.py  test_cli_verbosity.py  test_cloud_sync.py  test_cohere_embeddings.py  test_compress_e2e.py  test_compression_integration.py  test_conflict_resolution.py  test_e2e_acceptance.py  test_e2e_distributed_sync.py  test_e2e_events.py  test_e2e_multi_agent.py  test_e2e_sse.py  test_e2e_time_travel.py  test_e2e_webhooks.py  test_embedding_fallback.py  test_embedding_migration.py  test_embedding_performance.py  (+50 more)
