[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omi-embedding-example"
version = "0.1.0"
description = "Example embedding provider plugin for OMI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "OMI Contributors", email = "noreply@example.com"}]
keywords = ["omi", "plugin", "embedding", "example"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "omi-openclaw>=0.1.0",
    "numpy>=1.24.0",
]

[project.entry-points."omi.embedding_providers"]
dummy = "omi_embedding_example.provider:DummyEmbedder"

[project.urls]
Homepage = "https://github.com/slapglif/omi"
Repository = "https://github.com/slapglif/omi"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
